--- a/frontend/src/components/PrDetail/FilesTab/FilesTab.module.css
+++ b/frontend/src/components/PrDetail/FilesTab/FilesTab.module.css
@@ -97,3 +97,8 @@
   composes: toolbarToggleButton;
   margin-left: var(--s-2);
 }
+
+.lineWrapToggle {
+  composes: toolbarToggleButton;
+  margin-left: var(--s-2);
+}
